cmake-build-debug/ciLispParser.output
Grammar

    0 $accept: program $end

    1 program: s_expr EOL

    2 s_expr: number
    3       | f_expr
    4       | QUIT
    5       | error
    6       | symbol
    7       | LPAREN let_section s_expr RPAREN

    8 let_section: LPAREN let_list RPAREN

    9 let_list: LET let_element
   10         | let_list let_element

   11 let_element: LPAREN SYMBOL s_expr RPAREN

   12 number: INT
   13       | DOUBLE

   14 symbol: SYMBOL

   15 f_expr: LPAREN FUNC s_expr RPAREN
   16       | LPAREN FUNC s_expr s_expr RPAREN


Terminals, with rules where they appear

$end (0) 0
error (256) 5
FUNC (258) 15 16
SYMBOL (259) 11 14
INT (260) 12
DOUBLE (261) 13
LPAREN (262) 7 8 11 15 16
RPAREN (263) 7 8 11 15 16
EOL (264) 1
LET (265) 9
QUIT (266) 4


Nonterminals, with rules where they appear

$accept (12)
    on left: 0
program (13)
    on left: 1, on right: 0
s_expr (14)
    on left: 2 3 4 5 6 7, on right: 1 7 11 15 16
let_section (15)
    on left: 8, on right: 7
let_list (16)
    on left: 9 10, on right: 8 10
let_element (17)
    on left: 11, on right: 9 10
number (18)
    on left: 12 13, on right: 2
symbol (19)
    on left: 14, on right: 6
f_expr (20)
    on left: 15 16, on right: 3


state 0

    0 $accept: . program $end

    error   shift, and go to state 1
    SYMBOL  shift, and go to state 2
    INT     shift, and go to state 3
    DOUBLE  shift, and go to state 4
    LPAREN  shift, and go to state 5
    QUIT    shift, and go to state 6

    program  go to state 7
    s_expr   go to state 8
    number   go to state 9
    symbol   go to state 10
    f_expr   go to state 11


state 1

    5 s_expr: error .

    $default  reduce using rule 5 (s_expr)


state 2

   14 symbol: SYMBOL .

    $default  reduce using rule 14 (symbol)


state 3

   12 number: INT .

    $default  reduce using rule 12 (number)


state 4

   13 number: DOUBLE .

    $default  reduce using rule 13 (number)


state 5

    7 s_expr: LPAREN . let_section s_expr RPAREN
   15 f_expr: LPAREN . FUNC s_expr RPAREN
   16       | LPAREN . FUNC s_expr s_expr RPAREN

    FUNC    shift, and go to state 12
    LPAREN  shift, and go to state 13

    let_section  go to state 14


state 6

    4 s_expr: QUIT .

    $default  reduce using rule 4 (s_expr)


state 7

    0 $accept: program . $end

    $end  shift, and go to state 15


state 8

    1 program: s_expr . EOL

    EOL  shift, and go to state 16


state 9

    2 s_expr: number .

    $default  reduce using rule 2 (s_expr)


state 10

    6 s_expr: symbol .

    $default  reduce using rule 6 (s_expr)


state 11

    3 s_expr: f_expr .

    $default  reduce using rule 3 (s_expr)


state 12

   15 f_expr: LPAREN FUNC . s_expr RPAREN
   16       | LPAREN FUNC . s_expr s_expr RPAREN

    error   shift, and go to state 1
    SYMBOL  shift, and go to state 2
    INT     shift, and go to state 3
    DOUBLE  shift, and go to state 4
    LPAREN  shift, and go to state 5
    QUIT    shift, and go to state 6

    s_expr  go to state 17
    number  go to state 9
    symbol  go to state 10
    f_expr  go to state 11


state 13

    8 let_section: LPAREN . let_list RPAREN

    LET  shift, and go to state 18

    let_list  go to state 19


state 14

    7 s_expr: LPAREN let_section . s_expr RPAREN

    error   shift, and go to state 1
    SYMBOL  shift, and go to state 2
    INT     shift, and go to state 3
    DOUBLE  shift, and go to state 4
    LPAREN  shift, and go to state 5
    QUIT    shift, and go to state 6

    s_expr  go to state 20
    number  go to state 9
    symbol  go to state 10
    f_expr  go to state 11


state 15

    0 $accept: program $end .

    $default  accept


state 16

    1 program: s_expr EOL .

    $default  reduce using rule 1 (program)


state 17

   15 f_expr: LPAREN FUNC s_expr . RPAREN
   16       | LPAREN FUNC s_expr . s_expr RPAREN

    error   shift, and go to state 1
    SYMBOL  shift, and go to state 2
    INT     shift, and go to state 3
    DOUBLE  shift, and go to state 4
    LPAREN  shift, and go to state 5
    RPAREN  shift, and go to state 21
    QUIT    shift, and go to state 6

    s_expr  go to state 22
    number  go to state 9
    symbol  go to state 10
    f_expr  go to state 11


state 18

    9 let_list: LET . let_element

    LPAREN  shift, and go to state 23

    let_element  go to state 24


state 19

    8 let_section: LPAREN let_list . RPAREN
   10 let_list: let_list . let_element

    LPAREN  shift, and go to state 23
    RPAREN  shift, and go to state 25

    let_element  go to state 26


state 20

    7 s_expr: LPAREN let_section s_expr . RPAREN

    RPAREN  shift, and go to state 27


state 21

   15 f_expr: LPAREN FUNC s_expr RPAREN .

    $default  reduce using rule 15 (f_expr)


state 22

   16 f_expr: LPAREN FUNC s_expr s_expr . RPAREN

    RPAREN  shift, and go to state 28


state 23

   11 let_element: LPAREN . SYMBOL s_expr RPAREN

    SYMBOL  shift, and go to state 29


state 24

    9 let_list: LET let_element .

    $default  reduce using rule 9 (let_list)


state 25

    8 let_section: LPAREN let_list RPAREN .

    $default  reduce using rule 8 (let_section)


state 26

   10 let_list: let_list let_element .

    $default  reduce using rule 10 (let_list)


state 27

    7 s_expr: LPAREN let_section s_expr RPAREN .

    $default  reduce using rule 7 (s_expr)


state 28

   16 f_expr: LPAREN FUNC s_expr s_expr RPAREN .

    $default  reduce using rule 16 (f_expr)


state 29

   11 let_element: LPAREN SYMBOL . s_expr RPAREN

    error   shift, and go to state 1
    SYMBOL  shift, and go to state 2
    INT     shift, and go to state 3
    DOUBLE  shift, and go to state 4
    LPAREN  shift, and go to state 5
    QUIT    shift, and go to state 6

    s_expr  go to state 30
    number  go to state 9
    symbol  go to state 10
    f_expr  go to state 11


state 30

   11 let_element: LPAREN SYMBOL s_expr . RPAREN

    RPAREN  shift, and go to state 31


state 31

   11 let_element: LPAREN SYMBOL s_expr RPAREN .

    $default  reduce using rule 11 (let_element)
